--- a/README.org
+++ b/README.org
@@ -1,7 +1,8 @@
 #+title: Gruvbox Dark Theme For DramaCool9
+#+description: Stylesheet to change the look and feel of dramacool9.pw website
+#+author: [[mailto:touhidulshawan@gmail.com][Touhidul Shawan]]
 
-
-[[https://github.com/touhidulshawan/dotfiles/blob/main/.screenshots/dramacool9.png]]
+[[./screenshot.png]]
 
 Gruvbox Dark theme for [[https://www.dramacool9.co/][DramaCool9]] based on [[https://github.com/morhetz/gruvbox][morhetz]] gruvbox colorscheme
 
